# nachocvIA

./: app.py  models.py  pyproject.toml  routes.py  test_linkedin.py  test_pdf.py
content/: knowledge_base.md  knowledge_base.txt
content/interviews/: sample_qa.json
static/css/: custom.css
static/js/: admin.js  appointment.js  chatbot.js  main.js
templates/: admin.html  appointment.html  base.html  contact.html  cv.html  index.html
utils/: linkedin_scraper.py  pdf_parser.py  rag_utils.py
